2004-06-06  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* ly/vlaams.ly: new file. (Thanks Hendrik Maryns)

2004-06-04  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/notation.itely (Instrument transpositions):
	Correct the name of the instrumentTransposition property.

2004-06-04  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/output-ps.scm (ps-font-command): fix parmesan coding too.

2004-06-04  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/lilypond-book.py (output): Bug fix so preLilyPondExample
	and postLilyPondExample are called when defined.

2004-06-03  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* ly/nederlands.ly (pitchnames): use ly:parser-set-note-names.
	This fixes setting notenames with `\include "nederlands.ly" '

	* lily/my-lily-parser.cc (LY_DEFINE): ly:parser-set-note-names:
	new function.

2004-06-01  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/page-layout.scm: don't do piece, it should be in score-title
	only.

	* lily/lexer.ll: lex \score separately.

	* lily/paper-book.cc: junk stencil2line.

	* lily/paper-line.cc (Paper_line): construct from Stencil
	directly. No futzing with the dimensions.

	* lily/include/paper-line.hh (class Paper_line): 

	* lily/stencil.cc (interpret_stencil_expression): combine-stencil
	takes arbitrary number of arguments.

	* input/test/markup-score.ly (tuning): simplify example. 

2004-05-31  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/score.cc (LY_DEFINE): ly:score-embedded-format, new function. 

	* scm/define-markup-commands.scm (score): define score-markup

	* lily/parser.yy (markup): use score-markup.

	* lily/score.cc: add ly:score? 

2004-05-30  Carl Sorensen <carl_sorensen@byu.edu>

	* scm/fret-diagrams.scm: add fret-diagram-verbose markup; modified
	fret-parse-string so it prepares for calls to fret-diagram-verbose
	Changed display constants to props so they are available for
	\override.
	
2004-05-31  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* VERSION: release 2.3.3
