@@ -1,5 +1,8 @@
 2004-06-06  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* lily/accidental-engraver.cc (number_accidentals_from_sig):
+	bugfix, 2nd try.
+
 	* ly/vlaams.ly: new file. (Thanks Hendrik Maryns)
 
 2004-06-04  Mats Bengtsson  <mabe@drongo.s3.kth.se>
